# annotation_setup

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  init.sh  make_argillasetup_on_ec2.tf  pyproject.toml  terraform.tfstate  terraform.tfstate.backup
config/: dataset.json  users.jsonl
data/: data_for_annotation.csv
old/: init.sh
src/: create_project.py
