[tool.poetry]
name = "annotation-setup"
version = "0.1.0"
description = ""
authors = ["MLS <mls@damvad.com>"]
readme = "README.md"
packages = [{include = "annotation_setup"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
argilla = "^1.16.0"
art = "^6.1"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
